:bug: Update styles
Fix emoji size on mobile to prevent not showing on some android devices.

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -181,6 +181,10 @@ main.wrap {
 		justify-content: center!important;
 		text-align: center!important;
 	}
+
+	.emoji .gitmoji {
+		font-size: 50px;
+	}
 }
 
 @media(min-width: 2048px) {
